added some more pages

--- a/online compilers.html
+++ b/online compilers.html
@@ -51,7 +51,7 @@
        </div>
        <div class="des">
         <p>here there is a python compiler</p>
-       <button><a href="https://www.programiz.com/python-programming/online-compiler/" target="python">Python comipler</a></button>
+       <button><a href="https://www.sololearn.com/compiler-playground/python" target="python">Python comipler</a></button>
        </div>
        </div>
        <!--cards -->
@@ -77,7 +77,7 @@
        <div class="card">
        
        <div class="image">
-          <img src="clanguage.webp">
+          <img src="clanguage1.jpg">
        </div>
        <div class="title">
         <h1>
