--- a/softwares.html
+++ b/softwares.html
@@ -17,7 +17,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#"><a href="index.html">HOME</a> </a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SOFTWARES</a></li>
                     <li><a href="#">DESIGN</a></li>
@@ -36,7 +36,7 @@
             <p class="par">This is amazing to find the language softwares <br> what ever about information
                 <br> If need for this education of Engineer</p>
                 
-                <button class="cn"><a href="#">MAIL US</a></button><br>
+                <button class="cn"><a href="mailto:manideep4942@gmail.com">MAIL US</a></button><br>
                <CENTER><h2><MARQUEE Behavior="scroll" direction="up" scrollamount="2">SOFTWARE AVAILABILITY</MARQUEE></h2></CENTER> 
 
                 <table class="font">
@@ -105,20 +105,3 @@
                 </table>
 </body>
 </html>
-
-
-<tr>
-    <td>REACT</td>
-    <td>REACT</td>
-    <td><a href=""></a></td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
-  </tr>
