updated some ne files
updated some new files to do

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
                 <a href="#"> <button class="btn">Search</button></a>
+                
             </div>
 
         </div> 
@@ -52,7 +53,7 @@
        Road Maps</h1>
        </div>
        <div class="des">
-        <p>Here You Can Go Through Videos <br></p>
+        <p>GET A PLAN to start learning <br></p>
        <button><a href="Rood maps.html" target="rood map">GO</a></button>
        </div>
        </div>
@@ -102,7 +103,7 @@
         </div>
         <div class="des">
          <p>No more excuses to pay for everything</p>
-        <button><a href="https://www.programiz.com/cpp-programming/online-compiler/" target="c++">GO</a></button>
+        <button><a href="" target="c++">GO</a></button>
         </div>
         </div>
        
