--- a/online compilers.html
+++ b/online compilers.html
@@ -51,7 +51,7 @@
        </div>
        <div class="des">
         <p>here there is a python compiler</p>
-       <button><a href="https://www.sololearn.com/compiler-playground/python" target="python">Python comipler</a></button>
+       <button><a href="https://www.sololearn.com/compiler-playground/python" target="python">go</a></button>
        </div>
        </div>
        <!--cards -->
@@ -68,7 +68,7 @@
        </div>
        <div class="des">
         <p>This java compiler from InterviewBit</p>
-       <button><a href="https://www.interviewbit.com/online-java-compiler/" target="git">Java compiler</a> </button>
+       <button><a href="https://www.interviewbit.com/online-java-compiler/" target="git">COMPILE</a> </button>
        </div>
        </div>
        <!--cards -->
